[project]
name = "langwatch-nebius"
version = "0.1.0"
description = "LangWatch x Nebius: Comparing LLM models for AI agent quality using agent simulations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=1.6.4",
    "anthropic>=0.81.0",
    "langwatch>=0.2.4",
    "langwatch-scenario>=0.7.11",
    "openinference-instrumentation-agno>=0.1.6",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
]
